force-app/main/default/objects/Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <referenceTo>Author__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>