force-app/main/default/objects/Book__c/fields/Binding__c.field-meta.xml
<CustomField>
    <fullName>Binding__c</fullName>
    <label>Binding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardcover</fullName>
            </value>
            <value>
                <fullName>Paperback</fullName>
            </value>
            <value>
                <fullName>ebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>