force-app/main/default/objects/Book__c/fields/book_id__c.field-meta.xml
<CustomField>
    <fullName>book_id__c</fullName>
    <externalId>true</externalId>
    <label>book_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>