force-app/main/default/objects/Book__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Book Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>