force-app/main/default/objects/Book__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Publisher</label>
    <referenceTo>Publisher__c</referenceTo>
    <relationshipLabel>Books</relationshipLabel>
    <relationshipName>Books1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>